--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= yield %>
-    <div id="container" class="container-lg">
+    <div class="container">
     <h2>Stupid coaching</h2>
     <p>ask your coach anything, even if you are retarded</p>
       <div class="border border-light p-3 m-1">
@@ -24,6 +24,7 @@
         <p><%= @answer %></p>
         <p>-Studpid coach</p>
       </div>
+      <%= link_to "ask another question?", ask_path %>
     </div>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
